# RustBot

./: .gitignore  Cargo.toml  README.md
css/: fite.css
src/: main.rs
