[package]
name = "rustbot"
version = "0.1.0"
authors = ["TheMightyBuzzard <themightybuzzard@soylentnews.org>"]

[[bin]]
name = "rustbot"
path = "src/main.rs"

[dependencies]
regex = "0.1"
rusqlite = "0.6"
rustc-serialize = "0.3"
irc = "0.11"
time = "0.1"
rand = "0.3"
rust-crypto = "0.2"
lazy_static = "*"

[dependencies.curl]
git = "https://github.com/alexcrichton/curl-rust"
